2000-09-21  Lars Wirzenius  <liw@iki.fi>

	* gw/octstr.c: Reformatted to new code layout.

2000-09-21  Lars Wirzenius  <liw@iki.fi>

	* gw/wapbox.c: Start the WAP application layer before the
	heartbeat thread. This prevents a race condition at startup.

2000-09-21  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: In TimerHeap struct, rename "heap" field to "tab".
	There's something confusing about heap->heap[index].

	* gw/timers.c: Simplified main loop in the timer thread.
	Made it process all elapsed timers before releasing its lock
	-- should be faster if a bunch of timers elapse at once.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/wsp_headers.c: Try to skip over unknown code pages more
	intelligently.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.[ch], gw/wtp.c: Renamed timer_* to gwtimer_* to
	avoid name conflict with system functions.  Sigh.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: Reformatted according to new layout standard.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: Implement the heap structure using a C array,
	instead of using List.  This has less overhead and removes the
	need for list_swap.

	* gw/list.[ch]: Remove list_swap.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.[ch]: Removed timersets from the interface.  The choice
	of what timers should be handled by a single thread is a performance
	issue, not an interface issue.  All timers are now handled by a
	single timer thread.  The choice of output list is now specified
	per timer, instead of per timer set.
	Added timer_init and timer_shutdown functions that should be
	called before creating any timers.

	* gw/wapbox.c, gw/wtp.c: Adjust to new timers interface.

2000-09-19  Richard Braakman  <dark@wapit.com>

	* gw/timers.c, gw/timers.h: New timers.  Faster, better, and
	they actually time out.

	* gw/wtp_timer.c, gw/wtp_timer.h: Removed.  (Remnants of old
	timer code).
