@@ -1,5 +1,14 @@
 2000-09-21  Lars Wirzenius  <liw@iki.fi>
 
+	* gw/octstr.c: octstr_compare: Fixed behavior when either argument
+	was a zero length octet string. It used to always return zero,
+	now it returns -1 or 1 if the other argument is not a zero length
+	octet string.
+	
+	* gw/octstr.[ch]: Wrote octstr_case_compare.
+
+2000-09-21  Lars Wirzenius  <liw@iki.fi>
+
 	* gw/octstr.c: Reformatted to new code layout.
 
 2000-09-21  Lars Wirzenius  <liw@iki.fi>
